# onec-ordinary-forms

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  containers.md  development.md  elem-json.md  research-map.md
examples/elem-json/: minimal.json
src/onec_ordinary_forms/: __init__.py  bracket.py  cli.py  corpus.py  formbin.py  liststream.py  liststream_xml.py  ordinary_model.py  ordinary_platform.py  ordinary_properties.py  ordinary_stream.py  pipeline.py  platform_model.py  platform_model_catalog.json  ui_values.py  value_codec.py
src/onec_ordinary_forms/data/: ordinary-form-palette-8.2.19.json
src/onec_ordinary_forms/schemas/: Configuration.xsd  OrdinaryForm.xsd  PlatformConfigStructure.xsd  metadata-configuration.xsd  metadata.xsd  ordinary-form.xsd
src/onec_ordinary_forms/schemas/platform/8.2/: schemas.json
src/onec_ordinary_forms/schemas/platform/8.2/bsl/: bsl_root-01-http_v8.1c.ru_8.2_data_bsl.xsd
src/onec_ordinary_forms/schemas/platform/8.5/: schemas.json
tests/: test_cli_smoke.py  test_palette_contract.py  test_platform_model.py  test_value_codec.py
tools/: audit_form_palette.py  extract_help_palette.py  extract_platform_model_catalog.py  extract_platform_palette.py  extract_platform_xml_resources.py  ghidra_decompile_form_functions.sh  ghidra_extract_form_xrefs.sh  platform_validate_epf.sh  vendor_platform_schemas.py
tools/ghidra/: ExtractFormDecompile.java  ExtractFormXrefs.java
(+105 files in other folders)
