[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "onec-ordinary-forms"
version = "0.4.1"
description = "Object-model XML tools for 1C ordinary forms"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Maxon" }
]
keywords = ["1c", "ordinary-forms", "xml", "epf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Version Control",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "lxml>=5",
  "pytest>=8",
  "twine>=5",
]

[project.scripts]
onec-ordinary-forms = "onec_ordinary_forms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onec_ordinary_forms = ["schemas/*.xsd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
